--- a/GAtec.Seletivo.Web/Views/Home/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Home/Index.cshtml
@@ -1,31 +1,68 @@
-﻿@{
+﻿@model GAtec.Seletivo.Domain.Model.Recruitment
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-@*<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div id="grid"></div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>*@
+<script>
+
+    $(document).ready(function () {
+
+        $("#grid").kendoGrid({
+            dataSource: {
+                transport: {
+                    read: "@Url.Action("IndexAsync","Home")",
+                    dataType: "json",
+                    type: "GET",
+                    schema: {
+                        parse: function (data) {
+                            var res = [];
+                            $.each(data, function (idx, elem) {
+                                res.push({ date: new Date(elem.date.time) });
+                            });
+                            return res;
+                        }
+                    }
+                },
+                pageSize: 20
+            },
+            //detailInit: detailInit,
+            dataBound: function () {
+                this.expandRow(this.tbody.find("tr.k-master-row").first());
+            },
+            columns: [{
+                field: "Id",
+                hidden: true
+            }, {
+                field: "Description",
+                title: "Descrição",
+                width: 300
+            }]
+
+        });
+    });
+
+    @*function detailInit(e) {
+        $("<div/>").appendTo(e.detailCell).kendoGrid({
+            dataSource: {
+                read: "@Url.Action("IndexCAsync", "Home")",
+                dataType: "json",
+                type: "GET",
+                serverPaging: true,
+                serverSorting: true,
+                serverFiltering: true,
+                pageSize: 10,
+                filter: { field: "ID_RECRUIT", operator: "eq", value: e.data.Id }
+            },
+            scrollable: false,
+            sortable: true,
+            pageable: true,
+            columns: [
+                { field: "ID", width: "110px" }
+            ]
+        });
+    }*@
+
+</script>
