--- a/GAtec.Seletivo.Web/Views/Admin/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Admin/Index.cshtml
@@ -17,14 +17,40 @@
 </head>
 <body class="reset">
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">GAtec Seletivo</a>
-        <a class="nav-item nav-link">@Html.ActionLink("Login", "Index", "Login", null, new { @class = "nav-link" })</a>
+        <a class="navbar-brand" href="#">Seletivo</a>
+        <div class="pull-right">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">@Html.ActionLink("Login", "Index", "Login", null, new { @class = "nav-link" })</li>
+            </ul>
+        </div>
+       
         <!-- Navbar content -->
     </nav>
     <div class="bg">
     </div>
     <div class="form-front">
-        @using (Html.BeginForm("Index", "Admin", FormMethod.Post))
+        <div class="container">
+            <div class="card card-container">
+                <img src="~/Content/images/gatec.png" />
+                <p id="profile-name" class="profile-name-card"></p>
+                @using (Html.BeginForm("Index", "Admin", FormMethod.Post, new { @class = "form-signin" }))
+                {
+
+                    
+                    @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", placeHolder = "Name" })
+                    @Html.ValidationMessageFor(model => model.UserName)
+
+
+                    @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeHolder = "Password" })
+                    @Html.ValidationMessageFor(model => model.Password)
+
+
+                    <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+                }<!-- /form -->
+               
+            </div><!-- /card-container -->
+        </div><!-- /container -->
+        @*@using (Html.BeginForm("Index", "Admin", FormMethod.Post))
         {
             <div class="col form-group">
                 <div class="col col-md-12"></div>
@@ -63,7 +89,7 @@
                 </div>
                 <div class="col col-md-2"></div>
             </div>
-        }
+        }*@
 
     </div>
 </body>
