--- a/GAtec.Seletivo.Web/Views/Shared/_Layout.cshtml
+++ b/GAtec.Seletivo.Web/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
 </head>
 <body>
 
-    <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        @Html.ActionLink("GAtec Seletivo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-blue-gatec">
+        @Html.ActionLink("Seletivo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
