--- a/GAtec.Seletivo.Web/Views/Admin/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Admin/Index.cshtml
@@ -16,7 +16,7 @@
 
 </head>
 <body class="reset">
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-blue-gatec">
         <a class="navbar-brand" href="#">Seletivo</a>
         <div class="pull-right">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -45,9 +45,9 @@
                     @Html.ValidationMessageFor(model => model.Password)
 
 
-                    <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-                }<!-- /form -->
-               
+                    <button class="btn btn-primary btn-block btn-signin" type="submit">Sign in</button>
+                }<!-- /form -->   
+                   
             </div><!-- /card-container -->
         </div><!-- /container -->
         @*@using (Html.BeginForm("Index", "Admin", FormMethod.Post))
