--- a/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
+++ b/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
@@ -5,15 +5,14 @@
 <p></p>
 <h4>@Model.Question.Description</h4>
 
-<div class="container">
-    <div class="col-md-4"></div>
-    <div class="row col-md-8">
+<div class="container border rounded ">
+    <div class="col-md-8">
         <form id="form-create">
-            <div class="row form-group">
+            <div class="form-group">
                 @Html.LabelFor(model => model.Answer.Description, new { @class = "col-form-label" })
                 @Html.TextAreaFor(model => model.Answer.Description, new { @class = " form-control", id = "description" })
             </div>
-            <div class="row form-group">
+            <div class="form-group">
                 @Html.LabelFor(model => model.Answer.RightAnswer, new { @class = "col-form-label" })
                 @Html.TextBoxFor(model => model.Answer.RightAnswer, new { @class = " form-control", id = "rightAnswer" })
 
@@ -41,23 +40,19 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <form id="form-edit">
-                            <div class="row form-group">
-                                @Html.LabelFor(model => model.Answer.Description, new { @class = "col-form-label" })
-                                @Html.TextAreaFor(model => model.Answer.Description, new { @class = " form-control", id = "description-edit" })
-                            </div>
-                            <div class="row form-group">
-                                @Html.LabelFor(model => model.Answer.RightAnswer, new { @class = "col-form-label" })
-                                @Html.TextBoxFor(model => model.Answer.RightAnswer, new { @class = " form-control", id = "rightAnswer-edit" })
-
-                            </div>
-                            @Html.TextBoxFor(model => model.Answer.QuestionId, new { style = "display:none", id = "questionId-edit", @Value = Model.Question.Id })
-                            @Html.HiddenFor(model => model.Answer.Id, new { id = "id-edit"})
-                        </form>
+                <form id="form-edit">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Answer.Description, new { @class = "col-form-label" })
+                        @Html.TextAreaFor(model => model.Answer.Description, new { @class = " form-control", id = "description-edit" })
                     </div>
-                </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Answer.RightAnswer, new { @class = "col-form-label" })
+                        @Html.TextBoxFor(model => model.Answer.RightAnswer, new { @class = " form-control", id = "rightAnswer-edit" })
+
+                    </div>
+                    @Html.TextBoxFor(model => model.Answer.QuestionId, new { style = "display:none", id = "questionId-edit", @Value = Model.Question.Id })
+                    @Html.HiddenFor(model => model.Answer.Id, new { id = "id-edit"})
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Sair</button>
@@ -110,8 +105,7 @@
                     hidden: true
                 }, {
                     field: "Description",
-                    title: "Resposta",
-                    width: 400
+                    title: "Resposta"
                 }, {
                     field: "RightAnswer",
                     title: "Certa?",
