adjustes in navbar, fixed on the top

--- a/GAtec.Seletivo.Web/Views/Recruitment/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Recruitment/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Recruitment";
 }
 <p></p>
-<h4> Cadastro de Recrutamento</h4>
+<h4 class="text-gatec"> Cadastro de Recrutamento</h4>
 
 <div class="container border rounded">
         <div class="col-md-8">
