--- a/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
+++ b/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Question";
 }
 <p></p>
-<h4>@Model.Question.Description</h4>
+<h4 class="text-gatec">@Model.Question.Description</h4>
 
 <div class="container border rounded ">
     <div class="col-md-8">
