--- a/GAtec.Seletivo.Web/Views/Exam/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Exam/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Exam";
 }
 <p></p>
-<h4> Cadastro de exames</h4>
+<h4 class="text-gatec"> Cadastro de exames</h4>
 
 <div class="container border rounded">
     <div class="col-md-6">
