--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -17,7 +17,7 @@
 
 </head>
 <body class="reset">
-    <nav class="navbar navbar-dark bg-blue-gatec">
+    <nav class="navbar navbar-dark bg-blue-gatec fixed-top">
         <a class="navbar-brand" href="#">Seletivo</a>
         <div class="pull-right">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
