--- a/GAtec.Seletivo.Web/Views/Question/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Question/Index.cshtml
@@ -61,8 +61,8 @@
     $(document).ready(function () {
 
         var data = [
-            { text: "Dissertation", value: "1" },
-            { text: "Multiple Choice", value: "2" }
+            { text: "Dissertação", value: "1" },
+            { text: "Múltipla Escolha", value: "2" }
         ];
 
         // create DropDownList from input HTML element
@@ -103,16 +103,20 @@
                     title: "Tipo",
                     width: 100,
                     values: data
-                },{
-                   template: "<button id='edit' class = 'btn btn-success'>Editar</button>",
-                   attributes: { "class": "text-center", },
-                   width: 100
-                },{
-                   template: "<button id='delete' class = 'btn btn-danger'>Excluir</button>",
-                   attributes: { "class": "text-center", },
-                   width: 100
-                },{
-                    template: "<button id='answer' class = 'btn btn-dark'>Adicionar respostas</button>",
+                }, {
+                    template: "<button id='edit' class = 'btn btn-success'>Editar</button>",
+                    attributes: { "class": "text-center", },
+                    width: 100
+                }, {
+                    template: "<button id='delete' class = 'btn btn-danger'>Excluir</button>",
+                    attributes: { "class": "text-center", },
+                    width: 100
+                }, {
+                    template: "<button id='answer' class = 'btn btn-dark'>Add respostas</button>",
+                    attributes: { "class": "text-center", },
+                    width: 150
+                }, {
+                    template: "<button id='exam' class = 'btn btn-dark'>Add Exames</button>",
                     attributes: { "class": "text-center", },
                     width: 150
                 }]
@@ -166,8 +170,8 @@
             $button = $(this),
             $tr = $button.closest("tr");
         dataItem = grid.dataItem($tr);
-       
-        var url = '@Url.Action("Delete", "Question")';       
+
+        var url = '@Url.Action("Delete", "Question")';
 
         $.ajax({
             url: url + '/' + dataItem.Id
@@ -184,6 +188,17 @@
         dataItem = grid.dataItem($tr);
 
         var url = '@Url.Action("Details", "Answer")';
+        window.location.href = url + '/' + dataItem.Id;
+
+    });
+
+    $("#grid").on("click", "#exam", function () {
+        var grid = $("#grid").data("kendoGrid"),
+            $button = $(this),
+            $tr = $button.closest("tr");
+        dataItem = grid.dataItem($tr);
+
+        var url = '@Url.Action("Details", "Exam")';
         window.location.href = url + '/' + dataItem.Id;
 
     });
