--- a/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
+++ b/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
@@ -87,7 +87,7 @@
             dataSource: data
         });
 
-        var url = '@Url.Action("IndexAsync","Exam")';    
+        var url = '@Url.Action("IndexAsync","Answer")';    
 
         $("#grid").kendoGrid({
                 dataSource: {
